# NetLoom

./: .markdownlint.json  .pre-commit-config.yaml  404.html  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labels.yaml  release.yaml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yaml  FEATURE-REQUEST.yaml
.github/workflows/: check-commit-message-pr.yaml  check-schema-not-modified.yaml  ci-code-quality.yaml  create-tag.yaml  deploy-docs.yml  labels.yaml  update-schema.yaml
architecture/: index.html
cli-reference/: index.html
configuration/: index.html
docs/en/: architecture.md  cli-reference.md  configuration.md  getting-started.md  index.md  shell-completion.md  topology-schema.md
getting-started/: index.html
netloom/: __init__.py  __main__.py  cli.py
netloom/cli/: __init__.py  _group.py  _paramtypes.py  completion.py  infra.py  lifecycle.py  manage.py  runtime.py  show.py
netloom/components/: __init__.py
netloom/components/config/: __init__.py  component.py  controller.py
netloom/components/infrastructure/: __init__.py  component.py  controller.py
netloom/connect/: __init__.py  _bridge.py  _scancodes.py  _terminal.py
netloom/controllers/: __init__.py  config.py  infrastructure.py  network.py  topology.py
netloom/core/: __init__.py  application.py  arch.py  component.py  controller.py  enums.py  errors.py  mac.py  model.py  paramtypes.py  types.py  vbox.py
netloom/data/: __init__.py  _fat.py  configdrive.py  constants.py
netloom/hypervisors/: __init__.py  base.py
netloom/hypervisors/vbox/: __init__.py  driver.py  manage.py  settings.py
netloom/models/: __init__.py  common.py  config.py  converters.py  internal.py
netloom/providers/: base.py  factory.py  virtualbox.py
netloom/renderers/: engine.py  networkd.py
netloom/templates/: registry.py
netloom/templates/_base/: _macros.j2
netloom/templates/bird/: bird.conf.j2  ospf.conf.j2  rip.conf.j2  static.conf.j2
netloom/templates/networkd/: bridge-port.network.j2  bridge.netdev.j2  bridge.network.j2  hostname.j2  interface.link.j2  interface.network.j2  routes.network.j2  sysctl.conf.j2  tunnel.netdev.j2  tunnel.network.j2  vlan-parent.network.j2  vlan.netdev.j2  vlan.network.j2
netloom/templates/nftables/: nftables.conf.j2
netloom/templates/services/: services.list.j2
netloom/templates/wireguard/: wg0.conf.j2
netloom/utils/: __init__.py  display.py
rules/: python-cli-design.md  python-component-architecture.md  python-error-handling.md  python-pydantic-models.md  python-rich-output.md  python-singleton-application.md  python-testing-patterns.md  python-type-hints.md
schemas/: example.yaml  template.yaml  topology-schema.json
schemas/labs/: lab1.topology.yaml  lab2.yaml  lab4.topology.yaml  lab5.topology.yaml
search/: search_index.json
shell-completion/: index.html
tests/: __init__.py  test_cli_paramtypes.py  test_core_application.py  test_core_enums.py  test_core_errors.py  test_core_mac.py  test_core_vbox.py  test_version.py
topology-schema/: index.html
