[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "netloom"
version = "0.1.1"
description = "Utility for creating and managing topologies for network labs."
maintainers = [ { name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" } ]
authors = [ { name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fattools",
  "jinja2",
  "orjson",
  "pydantic",
  "pydantic-yaml",
  "pyyaml",
  "rich-click",
]

scripts.netloom = "netloom.cli:cli"

[dependency-groups]
dev = [ "pre-commit", "ruff" ]
docs = [ "mkdocs", "mkdocs-material", "mkdocs-static-i18n" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "netloom" ]

[tool.hatch.build.targets.wheel.sources]
"netloom" = "netloom"

[tool.hatch.build.targets.sdist]
include = [ "netloom/**/*.py", "netloom/templates/**/*.j2" ]

[tool.ruff]
line-length = 120

lint.select = [ "E", "F", "I", "N", "S", "UP", "W", "YTT" ]
lint.isort.lines-after-imports = 2
