[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "netloom"
version = "0.2.1"
description = "Utility for creating and managing topologies for network labs."
maintainers = [ { name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" } ]
authors = [ { name = "Renat Mustafin", email = "mustafinrr.rm@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fattools",
  "jinja2",
  "orjson",
  "pydantic",
  "pydantic-yaml",
  "pyyaml",
  "rich-click",
]
scripts.netloom = "netloom.cli:cli"

[dependency-groups]
dev = [ "poethepoet", "prek", "ruff", "ty" ]
docs = [ "mkdocs", "mkdocs-material", "mkdocs-static-i18n" ]

[tool.hatch]
build.targets.sdist.include = [ "netloom/**/*.py", "netloom/templates/**/*.j2" ]
build.targets.wheel.packages = [ "netloom" ]
build.targets.wheel.sources.netloom = "netloom"
metadata.allow-direct-references = true

[tool.ruff]
line-length = 120
lint.select = [ "E", "F", "I", "N", "S", "UP", "W", "YTT" ]
lint.isort.lines-after-imports = 2

[tool.ty]
environment.root = [ "." ]

[tool.poe]
tasks.format = "ruff format ."
tasks.check-format = "ruff format --check ."
tasks.lint = "ruff check ."
tasks.typecheck = "ty check"
tasks.check = [ "check-format", "lint", "typecheck" ]
tasks.docs.sequence = [
  { cmd = "uv sync --group docs" },
  { cmd = "mkdocs serve -f mkdocs.yaml" },
]
